--- a/recipes.css
+++ b/recipes.css
@@ -1,41 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Savate:ital,wght@0,200..900;1,200..900&display=swap');
 
 /* reset by Josh Cameo */
-*, *::before, *::after {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 * {
-  margin: 0;
+    margin: 0;
 }
 
 body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
 }
 
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
 }
 
-input, button, textarea, select {
-  font: inherit;
+input,
+button,
+textarea,
+select {
+    font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
 }
 
 p {
-  text-wrap: pretty;
-}
-h1, h2, h3, h4, h5, h6 {
-  text-wrap: balance;
+    text-wrap: pretty;
 }
 
-#root, #__next {
-  isolation: isolate;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-wrap: balance;
+}
+
+#root,
+#__next {
+    isolation: isolate;
 }
 
 /* custom css start here */
@@ -44,6 +66,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     background-color: hsl(39, 100%, 84%);
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
@@ -72,19 +95,22 @@ h2 {
 }
 
 main {
+    width: 100%;
+    max-width: 720px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
     margin: 100px 0;
     border-radius: 16px;
     background-color: white;
     color: hsl(24, 5%, 18%);
-    width: 100%;
-    max-width: 720px;
     padding: 40px;
     line-height: 1.5;
-    display: flex;
-    flex-direction: column;
     animation: fadeIn 600ms ease-out both;
-    gap: 24px;
 }
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -121,6 +147,7 @@ td {
     color: rgb(73, 46, 18);
     ;
 }
+
 th {
     font-weight: 500;
 }
@@ -159,6 +186,7 @@ td {
     padding: 8px 16px;
     border-bottom: 1px solid rgb(207, 206, 205);
 }
+
 footer {
     font-size: 14px;
     padding: 8px;
@@ -170,6 +198,7 @@ header {
     width: 100%;
     text-align: center;
 }
+
 nav ul {
     font-size: 18px;
     width: 100%;
@@ -184,12 +213,11 @@ nav ul {
 
 nav a {
     text-decoration: none;
-    font-family: "Savate", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
     font-style: normal;
     color: rgb(117, 75, 31);
-
+     font-weight: 600;
+    font-style: normal;
+    color: rgb(64, 43, 17);
 }
 
 nav a:hover {
@@ -203,6 +231,11 @@ nav .logo {
     align-items: center;
     gap: 8px;
 }
+
+.before-after {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 figure {
     width: 100%;
     padding: 24px;
@@ -212,48 +245,66 @@ figcaption {
     margin-top: 12px;
     color: rgb(117, 75, 31);
 }
-figure img{
+figure img {
     border-radius: 16px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
     /* margin: 20px; */
 }
-.before-after {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
+
 #About p {
     line-height: 2;
     padding-bottom: 16px;
-} code {
+}
+
+code {
     color: rgb(117, 75, 31);
     font-weight: 700;
-    background-color: rgb(255, 236, 215);;
+    background-color: rgb(255, 236, 215);
+    ;
 
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 540px) {
+    nav span {
+        display: none;
+    }
+
     main {
-        padding: 32px;
+        width: 100%;
+        max-width: none !important;
+        padding: 24px;
         margin: 0;
         border-radius: 0px;
         font-size: 15px;
         overflow: hidden;
     }
+
+    nav ul {
+        font-size: 16px;
+        gap: 15px;
+        padding: 8px 16px;
+    }
+
     h1 {
         font-size: 1.6rem;
     }
+
     h2 {
         font-size: 1.30rem;
     }
 
     .recipe-image-container {
-        width: 98vw;
+        width: 100vw;
         margin: -40px -40px 0 -40px;
     }
 
     .recipe-image-container img {
         border-radius: 0px;
     }
+    .before-after {
+        grid-template-columns: 1fr;
+    }
+
     footer {
         font-size: 12px;
     }
